--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 /* Your CSS Code here. */
-.flex {
+.holder {
 
     display: flex;
     justify-content: space-between;
@@ -17,7 +17,7 @@
 
   
 
-  .flex > div {
+  .holder > div {
 
     background-color: red;
 
